[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
members = ["bin/nexus", "crates/*"]
resolver = "3"

[workspace.dependencies]
alloy = { version = "1.1.0", features = ["full"] }
anyhow = "1.0.100"
async-trait = "0.1.89"
futures = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
postgres = "0.19.12"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
] }
tokio-postgres = "0.7.15"
tracing = "0.1.41"
